Icon customer and courier in svg to avoid flickering

--- a/src/map/Map.css
+++ b/src/map/Map.css
@@ -36,7 +36,7 @@
     background: black;
     color: white;
     border-radius: 100%;
-    border: 2px solid #777;
+    border: 2px solid white;
     box-sizing: border-box;
     width: 32px;
     height: 32px;
@@ -83,6 +83,16 @@
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+.map svg g circle:nth-of-type(1) {
+    fill: white;
+    stroke: black;
+    stroke-width: 2px;
+}
+
+.map svg g path {
+    fill: black;
 }
 
 .map svg > path {
